@@ -6,4 +6,4 @@
 ############################################################################
 
 # Version
-ontmd.app.version=1.5.0.alpha6
+ontmd.app.version=1.5.0.alpha7
